# WEB

WEB-client/: CMakeLists.txt  main.cpp
WEB-client/UI-cl/: index.html  login.html  reg.html
Worker/: CMakeLists.txt  main.cpp
